# PaddleLite-on-Zephyr

./: README.en.md  README.md  dirent.h
modules/lib/paddlelite/lite/api/: CMakeLists.txt  light_api.cc  light_api_impl.cc  paddle_api.cc
modules/lib/paddlelite/lite/core/: context.h  device_info.cc  device_info.h  op_registry.h  program.cc  tensor.cc  version.h  workspace.h
modules/lib/paddlelite/lite/model_parser/: compatible_pb.cc  model_parser.cc  model_parser.h
modules/lib/paddlelite/lite/model_parser/cpp/: program_desc.cc
modules/lib/paddlelite/lite/model_parser/naive_buffer/: naive_buffer.cc  naive_buffer.h  param_desc.cc
modules/lib/paddlelite/lite/model_parser/pb/: var_desc.cc
modules/lib/paddlelite/lite/utils/: varient.h
modules/lib/paddlelite/zephyr/: module.yml
zephyr/: west.yml
zephyr/boards/arm64/qemu_cortex_a53/: qemu_cortex_a53.dts
zephyr/boards/arm64/roc_rk3568_pc/: roc_rk3568_pc.dts  roc_rk3568_pc_defconfig  roc_rk3568_pc_smp_defconfig
zephyr/cmake/compiler/arcmwdt/: compiler_flags.cmake
zephyr/cmake/compiler/gcc/: compiler_flags.cmake
zephyr/dts/arm64/qemu/: qemu-virt-a53.dtsi
zephyr/dts/arm64/rockchip/: rk3568.dtsi
zephyr/lib/libc/newlib/: Kconfig
zephyr/lib/libc/picolibc/: libc-hooks.c
zephyr/modules/paddlelite/: CMakeLists.txt  Kconfig
zephyr/samples/paddlelite/: CMakeLists.txt  prj.conf
zephyr/samples/paddlelite/src/: image_classification.cc
zephyr/samples/synchronization/: prj.conf
zephyr/soc/arm64/qemu_cortex_a53/: mmu_regions.c
zephyr/soc/arm64/rockchip/rk3568/: mmu_regions.c
(+1 files in other folders)
